--- a/Views/Home.html
+++ b/Views/Home.html
@@ -1,3 +1,7 @@
 ﻿<div class="col-md-12">
     <h1 ng-bind="title"></h1>
 </div>
+
+<div class="col-md-12">
+    <div id="button1" ng-click="changeState()"></div>
+</div>
